# BewiseProject

./: .env.example  .flake8  .gitignore  README.md  app.py  configuration.py  create_db.py  docker-compose.yaml  models.py  pyproject.toml  utils.py
